--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MONOID</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/icon.png">
 </head>
 <body>
     <div id = cover>
