--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
                     <div class="square"></div>
                 </div>
                 <div id = blocks>
-                    <div class="block">ГАЗОБЛОКИ</div>
-                    <div class="block">ПЕПЛОБЛОКИ</div>
-                    <div class="block">КЕРАМОБЛОКИ</div>
-                    <div class="block">ШЛАКОБЛОКИ</div>
+                    <div class="block">Газоблоки</div>
+                    <div class="block">Пеплоблоки</div>
+                    <div class="block">Керамоблоки</div>
+                    <div class="block">Шлакоблоки</div>
                 </div>
-                <div id = tel1 class="block">тел. 8-800-555-35-35</div>
+                <div id = tel1 class="block" style="font-weight: bold;">тел. 8-800-555-35-35</div>
             </div>
         </div>
         <div id = examples22>
@@ -286,9 +286,9 @@
                     <div class="square1"></div>
                 </div>
                 <div id = buildings>
-                    <div class="building">ДОМОВ</div>
-                    <div class="building">КОТТЕДЖЕЙ</div>
-                    <div class="building">БАНЬ</div>
+                    <div class="building">Домов</div>
+                    <div class="building">Коттеджей</div>
+                    <div class="building">Бань</div>
                 </div>
                 <img id = photobuilding src="images/building.svg" alt="building">
                 <div id = redbuild class = "redrectangle"></div>
