--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <div id = cover>
         <img id = "cover"; src="images/cover.svg" alt="cover">
         <h1>MONOID</h1>
-        <div id = "circle1"; class="circle"></div>
-        <div id = "circle2"; class="circle"></div>
-        <div id = "circle3"; class="circle"></div>
+        <div id = circles>
+            <div class="circle" style="position: relative !important;"></div>
+            <div class="circle" style="position: relative !important;"></div>
+            <div class="circle" style="position: relative !important;"></div>
+        </div>
         <img id = linescover src="images/linescover.svg" alt="linescover">
     </div>
     <div id = history>
